--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -5,9 +5,6 @@
     margin: 0px;
 }
 
-@media (min-width: 1024px) and (max-width: 1279px) {
-}
-
 @media (min-width: 768px) and (max-width: 1023px) {
     .places__title {
         font-size: 42px;
@@ -20,5 +17,6 @@
         font-size: 32px;
         line-height: 35px; 
         margin-bottom: 32px;
+        padding: 0px 16px;
     }
 }
