--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -25,6 +25,6 @@
 
 @media (max-width: 767px) {
    .places {
-      padding: 0px 16px 64px 16px;
+      padding: 0px 0px 64px 0px;
    }
 }
