--- a/blocks/start/__illustration/start__illustration.css
+++ b/blocks/start/__illustration/start__illustration.css
@@ -5,25 +5,26 @@
     object-position: top center;
 }
 
-@media (min-width: 1024px) and (max-width: 1279px) {
+@media (max-width: 1279px) {
     .start__illustration {
         width: 100%;
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+    .start__illustration {
         height: 580px;
     }
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
     .start__illustration {
-        width: calc(100% + 48px);
         height: 480px;
-        transform: translateX(-24px);
     }
 }
 
 @media (max-width: 767px) {
     .start__illustration {
-        width: calc(100% + 32px);
         height: 200px;
-        transform: translateX(-16px);
     }
  }
