--- a/blocks/start/__subtitle/start__subtitle.css
+++ b/blocks/start/__subtitle/start__subtitle.css
@@ -5,13 +5,20 @@
     text-align: center;
     margin: 0px auto 64px auto;
     width: 640px;
+    box-sizing: border-box;
 }
 
  @media (min-width: 1024px) and (max-width: 1279px) {
     .start__subtitle {
         margin-bottom: 56px;
+        padding: 0px 48px;
     }  
+ }
 
+ @media (min-width: 768px) and (max-width: 1023px) {
+    .start__subtitle {
+       padding: 0px 24px;
+    }
  }
 
  @media (max-width: 767px) {
@@ -19,6 +26,6 @@
         font-size: 16px;
         line-height: 20px;
         margin-bottom: 40px;
-        width: 100%;
+        width: 288px;
     }
  }
