--- a/blocks/start/__title/start__title.css
+++ b/blocks/start/__title/start__title.css
@@ -5,13 +5,27 @@
     text-align: center;
     margin: 0px auto 32px auto;
     width: 720px;
+    box-sizing: border-box;
 }
+
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+    .start__title {
+       padding: 0px 48px;
+    }
+}
+ 
+ @media (min-width: 768px) and (max-width: 1023px) {
+    .start__title {
+       padding: 0px 24px;
+    }
+ }
  
  @media (max-width: 767px) {
     .start__title {
-        font-size: 40px;
-        line-height: 44px;
-        margin-bottom: 16px;
-        width: 100%;
+       font-size: 40px;
+       line-height: 44px;
+       margin-bottom: 16px;
+       width: 288px;
     }
  }
