--- a/blocks/start/start.css
+++ b/blocks/start/start.css
@@ -25,6 +25,6 @@
 
 @media (max-width: 767px) {
    .start {
-      padding: 48px 16px 64px 16px;
+      padding: 48px 0px 64px 0px;
    }
 }
